fixed layout issues with rows

--- a/assets/scss/_tab_interface.scss
+++ b/assets/scss/_tab_interface.scss
@@ -1,6 +1,5 @@
 .tab {
   display: none;
-  margin: 0 auto;
 }
 
 tab-container {
@@ -9,14 +8,10 @@ tab-container {
 }
 
 .tabs {
-//  float: left;
-//  border-bottom: 1px solid #ccc;
   width: 100%;
-  margin-bottom: 16px;
   list-style: none;
   li {
-//    float: left;
-    display: inline;
+    display: inline-block;
     margin-right: 16px;
     padding: 10px 15px;
     height: 30px;
@@ -28,10 +23,6 @@ tab-container {
     }
   }
   li.active {
-//    border: 1px solid #ccc;
-//    border-bottom: 1px solid white;
-//    border-top-left-radius: 4px;
-//    border-top-right-radius: 4px;
     margin-bottom: -1px;
     height: 31px;
     padding: 9px 14px;
